# mimir-homeassistant-ai-builder

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  Requirements.md  pyproject.toml  repository.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
mimir/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  build.yaml  config.yaml  requirements.txt  run.sh
mimir/app/: __init__.py  config.py  main.py
mimir/app/conversation/: __init__.py  manager.py
mimir/app/db/: __init__.py  connection.py  repository.py
mimir/app/git/: __init__.py  manager.py
mimir/app/ha/: __init__.py  api.py  mcp_client.py  types.py  websocket.py
mimir/app/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  local.py  openai.py  types.py
mimir/app/notifications/: __init__.py  manager.py
mimir/app/telegram/: __init__.py  handler.py
mimir/app/tools/: __init__.py  base.py  ha_tools.py  memory_tools.py  registry.py  web_search.py
mimir/app/utils/: __init__.py  logging.py  mode_manager.py  rate_limiter.py
mimir/app/web/: __init__.py  handlers.py  templates.py
mimir/rootfs/etc/s6-overlay/s6-rc.d/mimir/: finish  run
mimir/translations/: en.yaml
tests/: __init__.py  conftest.py
tests/test_conversation/: __init__.py  test_manager.py
tests/test_ha/: __init__.py  test_types.py
tests/test_llm/: __init__.py  test_types.py
tests/test_tools/: __init__.py  test_registry.py
